# ramanujantools

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: package-overview.md  publications-analysis.md  theoretical-foundations.md  tutorial-advanced.md  tutorial.md
ramanujantools/: linear_recurrence.py
ramanujantools/cmf/: cmf.py
ramanujantools/pcf/: pcf.py
