[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ramanujantools"
version = "0.0.5"
description = "Official symbolic and numeric research tools developed by the Ramanujan Machine team"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

authors = [
  { name = "Ramanujan Machine Group", email = "ramanujan.machine@gmail.com" }
]

dependencies = [
    "tqdm>=4.65.0",
    "numpy>=2.0.0",
    "mpmath[gmpy2]>=1.3.0",
    "sympy>=1.11.0",
    "python-flint>=0.7.0",
]

[project.urls]
Homepage = "https://www.ramanujanmachine.com/"
Repository = "https://github.com/RamanujanMachine/ramanujantools"

[dependency-groups]
dev = []
debug = [
    "icecream>=2",
]
testing = [
    "pytest>=8.2.0",
]
terminal = [
    "euporie",
    "ipython",
]
jupyter = [
    "ipympl",
    # "jupyter-ai[all]",  # errors
    # "jupyter-collaboration",  # too much logs
    "jupyterlab~=4.0",
    "jupyterlab-code-formatter",
    "jupyterlab-git",
    "jupyterlab-github",
    # "jupyterlab-latex",  # not used
    "jupyterlab-myst",
    "jupytext",
    "nbconvert[webpdf]",
    "pandoc",
]
formatters = [
    "isort",
    "black",
]
lsp = [
    "pyright",
    "python-lsp-server",
    # "python-language-server",  # outdated
]


[tool.uv]
default-groups = ["dev", "testing", "terminal", "jupyter", "formatters", "lsp"]

[tool.pytest.ini_options]
python_files = "*_test.py"
testpaths = ["ramanujantools"]
